# ioai

./: .gitignore  README.md  data  data_conf.json  main.py  pyproject.toml
ioai/: __init__.py  train.py
ioai/data/: __init__.py  base.py  ioc.py
ioai/models/: __init__.py  base.py  faster_rcnn.py  resnet.py  unet.py
