[tool.poetry]
name = "ioai"
version = "0.0.1"
description = ""
authors = ["Hyeonrae Cho <hyeonrae.cho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.13.0"
torchvision = "^0.14.0"
pandas = "^1.5.1"
numpy = "^1.23.4"
opencv-python = "^4.6.0.66"
albumentations = "^1.3.0"
matplotlib = "^3.6.2"
torchinfo = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
